<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/personal_photo"
                android:layout_width="178dp"
                android:layout_height="210dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/personal_image"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/my_photo" />


            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/personal_photo"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="@string/mohamed_mabrouk_title"
                android:textSize="30sp" />


            <View
                android:id="@+id/divider"
                android:layout_width="395dp"
                android:layout_height="2dp"
                android:layout_below="@id/name_tv"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider" />


            <TextView
                android:id="@+id/track_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/track"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/track_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_toEndOf="@id/track_title"
                android:text="@string/android"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/country_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/track_title"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/country"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/country_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/track_value"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/country_title"
                android:text="@string/egypt"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/country_title"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/country_value"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/email_title"
                android:text="@string/email_value"
                android:textSize="19sp" />


            <TextView
                android:id="@+id/phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_title"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/phone_number"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phone_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_value"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/phone_title"
                android:text="@string/phone_number_value"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/slack_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_title"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/slack_username"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/slack_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_value"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/slack_title"
                android:text="@string/mohamed_mabrouk"
                android:textSize="20sp" />

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>